[gd_scene load_steps=62 format=3 uid="uid://b026alsepp2vu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_465au"]
[ext_resource type="Texture2D" uid="uid://bfyxrs0ch5h5i" path="res://graphics/player/idle_back/idle_back0000.png" id="2_hhdjh"]
[ext_resource type="Texture2D" uid="uid://bu7yj6t30t1mr" path="res://graphics/player/back/back0000.png" id="2_rj7ul"]
[ext_resource type="Texture2D" uid="uid://cde6nf4xpvkac" path="res://graphics/player/back/back0001.png" id="3_nluj0"]
[ext_resource type="Texture2D" uid="uid://birm7weds64kj" path="res://graphics/player/idle_back/idle_back0001.png" id="3_rf4g7"]
[ext_resource type="Texture2D" uid="uid://daasyka6lycqo" path="res://graphics/player/front/front0000.png" id="3_rlyy0"]
[ext_resource type="Texture2D" uid="uid://0dm4dvo1moga" path="res://graphics/player/front/front0001.png" id="4_gvlao"]
[ext_resource type="Texture2D" uid="uid://4wrsbtvkqri0" path="res://graphics/player/idle_side/idle_side0000.png" id="4_hiiwp"]
[ext_resource type="Texture2D" uid="uid://cj0r454b8qnmf" path="res://graphics/shadow.png" id="4_ldgxw"]
[ext_resource type="Texture2D" uid="uid://casb6djg2v0pl" path="res://graphics/player/idle_side/idle_side0001.png" id="5_8r2t5"]
[ext_resource type="Texture2D" uid="uid://bj3s3nqpkvmgv" path="res://graphics/player/run_side/run_side0000.png" id="6_6njc1"]
[ext_resource type="Texture2D" uid="uid://bvjeup8wfdu0w" path="res://graphics/player/side/side0000.png" id="6_apkn1"]
[ext_resource type="Texture2D" uid="uid://bnwwbbaj4nnfy" path="res://graphics/player/run_back/run_back0000.png" id="6_ivglb"]
[ext_resource type="Texture2D" uid="uid://q1rfe2fipxp0" path="res://graphics/player/jump_back/jump0000.png" id="6_qmxxf"]
[ext_resource type="Texture2D" uid="uid://mlonoae8mb50" path="res://graphics/player/jump_front/jump_front.png" id="7_25ee5"]
[ext_resource type="Texture2D" uid="uid://dq3ee0jfo77wx" path="res://graphics/player/jump_back/jump0001.png" id="7_bmvu1"]
[ext_resource type="Texture2D" uid="uid://bf5v34gskiacc" path="res://graphics/player/run_back/run_back0001.png" id="7_g4eab"]
[ext_resource type="Texture2D" uid="uid://dv4i5dcsrl8sx" path="res://graphics/player/side/side0001.png" id="7_obonv"]
[ext_resource type="Texture2D" uid="uid://bf04oqcyhw74g" path="res://graphics/player/run_side/run_side0001.png" id="7_tikoo"]
[ext_resource type="Texture2D" uid="uid://u0o8i517yxj7" path="res://graphics/player/jump_back/jump0002.png" id="8_2wfwa"]
[ext_resource type="Texture2D" uid="uid://doueilkx06ikr" path="res://graphics/player/side/side0002.png" id="8_rj008"]
[ext_resource type="Texture2D" uid="uid://dgy0ktpksx3vo" path="res://graphics/player/run_back/run_back0002.png" id="8_tng2f"]
[ext_resource type="Texture2D" uid="uid://pco80t8gcg3l" path="res://graphics/player/run_side/run_side0002.png" id="8_xrjca"]
[ext_resource type="Texture2D" uid="uid://bg86xhs11ogma" path="res://graphics/player/run_back/run_back0003.png" id="9_28btb"]
[ext_resource type="Texture2D" uid="uid://r8ffqyw68qa" path="res://graphics/player/run_side/run_side0003.png" id="9_56241"]
[ext_resource type="Texture2D" uid="uid://cfqxjrgqks2hl" path="res://graphics/player/ledge_back/ledge_back0000.png" id="9_s3srj"]
[ext_resource type="Texture2D" uid="uid://dx175lwekpbad" path="res://graphics/player/side/side0003.png" id="9_tgvea"]
[ext_resource type="Texture2D" uid="uid://8y2a7xm2l0j7" path="res://graphics/player/ledge_back/ledge_back0001.png" id="10_256rk"]
[ext_resource type="Texture2D" uid="uid://2eteel6t227l" path="res://graphics/player/ledge_side/ledge_side0000.png" id="11_d65ud"]
[ext_resource type="Texture2D" uid="uid://de6k81x3443e5" path="res://graphics/player/ledge_side/ledge_side0001.png" id="12_fep5f"]
[ext_resource type="Texture2D" uid="uid://b7t7cw2yviltc" path="res://graphics/player/smoke.png" id="12_g53nk"]
[ext_resource type="Texture2D" uid="uid://1dtqaqs0lsr4" path="res://graphics/player/run_front/run_front0000.png" id="18_xyuqw"]
[ext_resource type="Texture2D" uid="uid://cu2gyu1tli58d" path="res://graphics/player/run_front/run_front0001.png" id="19_5dftw"]
[ext_resource type="Texture2D" uid="uid://dxoncp35oj463" path="res://graphics/player/run_front/run_front0002.png" id="20_byopq"]
[ext_resource type="Texture2D" uid="uid://c0enwgatmeajg" path="res://graphics/player/run_front/run_front0003.png" id="21_68355"]
[ext_resource type="Texture2D" uid="uid://c2dfdvrdekg7e" path="res://graphics/player/wall_side/wall_side0000.png" id="25_m5jxl"]
[ext_resource type="Texture2D" uid="uid://ct3bmcokbkh4i" path="res://graphics/player/wall_side/wall_side0001.png" id="26_4gy22"]
[ext_resource type="Texture2D" uid="uid://cuaimrv0s6e5w" path="res://graphics/player/sweat.png" id="31_b88am"]
[ext_resource type="Texture2D" uid="uid://s5df4ew465y" path="res://graphics/player/wave/wave0000.png" id="36_akanq"]
[ext_resource type="Texture2D" uid="uid://c3o1afdpow4iw" path="res://graphics/player/wave/wave0001.png" id="37_53xsh"]
[ext_resource type="AudioStream" uid="uid://nieic867a3f4" path="res://audio/sfx/player/step2.wav" id="41_5f3cn"]
[ext_resource type="AudioStream" uid="uid://bo8f4jyx6evh2" path="res://audio/sfx/player/land0.wav" id="41_8wnub"]
[ext_resource type="AudioStream" uid="uid://yarcnx5odaob" path="res://audio/sfx/player/step0.wav" id="41_ywl4n"]
[ext_resource type="AudioStream" uid="uid://cw5ok22mmkfei" path="res://audio/sfx/player/land1.wav" id="43_nsxuy"]
[ext_resource type="AudioStream" uid="uid://d4frjdh1cn0tr" path="res://audio/sfx/player/slide1.wav" id="43_y1act"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hk1wg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hhdjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_rf4g7")
}],
"loop": true,
"name": &"idle_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hiiwp")
}, {
"duration": 1.0,
"texture": ExtResource("5_8r2t5")
}],
"loop": true,
"name": &"idle_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_qmxxf")
}],
"loop": false,
"name": &"jump_back",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_25ee5")
}],
"loop": false,
"name": &"jump_front",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bmvu1")
}, {
"duration": 1.0,
"texture": ExtResource("8_2wfwa")
}],
"loop": false,
"name": &"land_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_s3srj")
}, {
"duration": 1.0,
"texture": ExtResource("10_256rk")
}],
"loop": true,
"name": &"ledge_back",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_d65ud")
}, {
"duration": 1.0,
"texture": ExtResource("12_fep5f")
}],
"loop": true,
"name": &"ledge_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ivglb")
}, {
"duration": 1.0,
"texture": ExtResource("7_g4eab")
}, {
"duration": 1.0,
"texture": ExtResource("8_tng2f")
}, {
"duration": 1.0,
"texture": ExtResource("9_28btb")
}],
"loop": true,
"name": &"run_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_xyuqw")
}, {
"duration": 1.0,
"texture": ExtResource("19_5dftw")
}, {
"duration": 1.0,
"texture": ExtResource("20_byopq")
}, {
"duration": 1.0,
"texture": ExtResource("21_68355")
}],
"loop": true,
"name": &"run_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6njc1")
}, {
"duration": 1.0,
"texture": ExtResource("7_tikoo")
}, {
"duration": 1.0,
"texture": ExtResource("8_xrjca")
}, {
"duration": 1.0,
"texture": ExtResource("9_56241")
}],
"loop": true,
"name": &"run_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rj7ul")
}, {
"duration": 1.0,
"texture": ExtResource("3_nluj0")
}],
"loop": true,
"name": &"walk_back",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rlyy0")
}, {
"duration": 1.0,
"texture": ExtResource("4_gvlao")
}],
"loop": true,
"name": &"walk_front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_apkn1")
}, {
"duration": 1.0,
"texture": ExtResource("7_obonv")
}, {
"duration": 1.0,
"texture": ExtResource("8_rj008")
}, {
"duration": 1.0,
"texture": ExtResource("9_tgvea")
}],
"loop": true,
"name": &"walk_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_m5jxl")
}, {
"duration": 1.0,
"texture": ExtResource("26_4gy22")
}],
"loop": true,
"name": &"wall_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_akanq")
}, {
"duration": 1.0,
"texture": ExtResource("37_53xsh")
}],
"loop": true,
"name": &"wave",
"speed": 6.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mvfix"]
height = 2.4

[sub_resource type="SphereShape3D" id="SphereShape3D_e03sh"]
margin = 0.5
radius = 0.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bmiae"]
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qanpx"]
height = 0.235
radius = 1.02

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1ceg7"]
height = 0.1
radius = 0.62

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nmm0k"]
height = 0.1
radius = 0.62

[sub_resource type="Curve" id="Curve_4lh5e"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.263736), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vbv1m"]
curve = SubResource("Curve_4lh5e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xlstn"]
emission_shape = 1
emission_sphere_radius = 0.5
radial_velocity_min = -3.08
radial_velocity_max = 2.06
gravity = Vector3(0, 1, 0)
scale_min = 0.7
scale_max = 1.5
scale_curve = SubResource("CurveTexture_vbv1m")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b08q0"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0.521569, 0.521569, 0.521569, 1)
albedo_texture = ExtResource("12_g53nk")
texture_filter = 0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_vl1hi"]
material = SubResource("StandardMaterial3D_b08q0")

[sub_resource type="SphereShape3D" id="SphereShape3D_vxj5f"]
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vvxi4"]
height = 2.5
radius = 0.6

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l3mnp"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 2
stream_0/stream = ExtResource("41_ywl4n")
stream_0/weight = 1.0
stream_1/stream = ExtResource("41_5f3cn")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vhk68"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 2
stream_0/stream = ExtResource("41_8wnub")
stream_0/weight = 1.0
stream_1/stream = ExtResource("43_nsxuy")
stream_1/weight = 1.0

[node name="Player" type="CharacterBody3D" groups=["player"]]
process_physics_priority = -1
collision_layer = 2
input_ray_pickable = false
safe_margin = 0.01
script = ExtResource("1_465au")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 4.0
offset_top = 26.0
offset_right = 69.0
offset_bottom = 49.0
text = "STATE: 0"

[node name="Sprite" type="AnimatedSprite3D" parent="."]
layers = 2
cast_shadow = 0
pixel_size = 0.005
billboard = 2
shaded = true
alpha_cut = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_hk1wg")
animation = &"run_side"
autoplay = "idle_back"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_mvfix")

[node name="ParticleGimbal" type="Node3D" parent="."]

[node name="Sweat" type="Sprite3D" parent="ParticleGimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26904, 0.627098, 0.0282768)
layers = 2
transparency = 1.0
cast_shadow = 0
pixel_size = 0.005
billboard = 2
shaded = true
alpha_cut = 1
texture_filter = 0
render_priority = 1
texture = ExtResource("31_b88am")

[node name="Gimbal" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
top_level = true
shape = SubResource("SphereShape3D_e03sh")
spring_length = 8.0
margin = 1.0

[node name="Camera" type="Camera3D" parent="Gimbal"]
current = true

[node name="ShadowCast" type="RayCast3D" parent="."]
target_position = Vector3(0, -5, 0)

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.24772, 0)
top_level = true
size = Vector3(2, 8, 2)
texture_albedo = ExtResource("4_ldgxw")
lower_fade = 0.439226
distance_fade_begin = 3.4
distance_fade_length = 13.5
cull_mask = 1048573

[node name="WallCast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_bmiae")
target_position = Vector3(0, 0, 0)

[node name="GrabCast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_qanpx")
target_position = Vector3(0, 0.6, 0)

[node name="HeadCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07121, 0)
shape = SubResource("CylinderShape3D_qanpx")
target_position = Vector3(0, 0.6, 0)

[node name="StepCastTop" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_1ceg7")
target_position = Vector3(0, -1.14, 0)
margin = 0.04

[node name="StepCastBottom" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.14574, 0)
shape = SubResource("CylinderShape3D_nmm0k")
target_position = Vector3(0, 0, 0)
margin = 0.04

[node name="LandCast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_nmm0k")
target_position = Vector3(0, -4, 0)

[node name="SmokeParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.21066, 0)
layers = 2
emitting = false
amount = 40
lifetime = 4.0
process_material = SubResource("ParticleProcessMaterial_xlstn")
draw_pass_1 = SubResource("QuadMesh_vl1hi")

[node name="CollectArea" type="Area3D" parent="." groups=["player_collect"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectArea"]
shape = SubResource("SphereShape3D_vxj5f")

[node name="TriggerArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
shape = SubResource("CylinderShape3D_vvxi4")

[node name="SFX" type="Node3D" parent="."]

[node name="Step" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.22452, 0)
stream = SubResource("AudioStreamRandomizer_l3mnp")
attenuation_model = 3
pitch_scale = 0.95
max_polyphony = 2
bus = &"sfx"
attenuation_filter_cutoff_hz = 20500.0

[node name="Land" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.22452, 0)
stream = SubResource("AudioStreamRandomizer_vhk68")
attenuation_model = 3
max_polyphony = 2
bus = &"sfx"
attenuation_filter_cutoff_hz = 20500.0

[node name="Slide" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.22452, 0)
stream = ExtResource("43_y1act")
attenuation_model = 3
max_polyphony = 2
bus = &"sfx"
attenuation_filter_cutoff_hz = 20500.0

[connection signal="frame_changed" from="Sprite" to="." method="_on_sprite_frame_changed"]
